--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.15.0",
+    "axios": "^1.4.0",
     "multer": "^1.4.5-lts.1",
     "next": "^13.4.3",
     "prisma": "^4.15.0",
