feat(dashboard): about and projects page done
- Now dashboard has about page, by which we can get and add the about
  information
- dashboard has projects page, by which we can get and add the projects
  information

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ node_modules
 .vscode
 .vercel
 .env
+
+# "uploads" is temporary folder, where multer stores files. After storing them in cloud, they should be deleted ideally, if not, then congratulations, you have successfully found a bug.
+/uploads 
