--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@prisma/client": "^4.15.0",
     "axios": "^1.4.0",
+    "cloudinary": "^1.37.1",
     "multer": "^1.4.5-lts.1",
     "next": "^13.4.3",
     "prisma": "^4.15.0",
